Fix list styling and card spacing

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -51,6 +51,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding: 48px;
+  gap: 32px;
 }
 
 .card {
@@ -61,4 +62,8 @@ body {
   padding: 10px;
   margin: 15px;
   
+}
+
+ul {
+  list-style-type: none;
 }
